--- a/lowdefy.yaml
+++ b/lowdefy.yaml
@@ -2,8 +2,12 @@ name: whoswho
 lowdefy: 3.18.1
 licence: MIT License
 
+types:
+  AgGridAlpine:
+    url: https://blocks-cdn.lowdefy.com/v3.12.3/blocks-aggrid/meta/AgGridAlpine.json
+
 connections:
-  - id: google_sheet
+  - id: data_sheet
     type: GoogleSheet
     properties:
       client_email:
@@ -11,7 +15,18 @@ connections:
       private_key:
         _base64.decode:
           _secret: SHEETS_PRIVATE_KEY
-      spreadsheetId: 1IfzXUU9U4PM5cx3ZbSKk1ye1rPDAF1eqU75wt01_MQM
+      spreadsheetId: '1IfzXUU9U4PM5cx3ZbSKk1ye1rPDAF1eqU75wt01_MQM'
+      sheetId: '690927575'
+      write: false
+  - id: edit_sheet
+    type: GoogleSheet
+    properties:
+      client_email:
+        _secret: SHEETS_CLIENT_EMAIL
+      private_key:
+        _base64.decode:
+          _secret: SHEETS_PRIVATE_KEY
+      spreadsheetId: '1IfzXUU9U4PM5cx3ZbSKk1ye1rPDAF1eqU75wt01_MQM'
       sheetId: '892548616'
       write: true
 
