--- a/lowdefy.yaml
+++ b/lowdefy.yaml
@@ -6,19 +6,8 @@ types:
   AgGridAlpine:
     url: https://blocks-cdn.lowdefy.com/v3.12.3/blocks-aggrid/meta/AgGridAlpine.json
 
-connections:
-  - id: data_sheet
-    type: GoogleSheet
-    properties:
-      client_email:
-        _secret: SHEETS_CLIENT_EMAIL
-      private_key:
-        _base64.decode:
-          _secret: SHEETS_PRIVATE_KEY
-      spreadsheetId: '1IfzXUU9U4PM5cx3ZbSKk1ye1rPDAF1eqU75wt01_MQM'
-      sheetId: '690927575'
-      write: false
-  - id: edit_sheet
+connections:  
+  - id: form_sheet
     type: GoogleSheet
     properties:
       client_email:
