--- a/pages/edits.yaml
+++ b/pages/edits.yaml
@@ -1,9 +1,9 @@
-id: form
+id: edit
 type: PageHeaderMenu
 requests:
   - id: save_data
     type: GoogleSheetAppendOne
-    connectionId: form_sheet
+    connectionId: edit_sheet
     properties:
       row:
         person_name:
@@ -35,7 +35,6 @@ blocks:
           level: 1
           style:
             text-align: center
-            font-family: Fredoka One
           underline: true
       - id: person_name
         type: TextInput
@@ -74,8 +73,6 @@ blocks:
           title: Reset
           type: default
           icon: ClearOutlined
-          style:
-            font-family: Fredoka One
         events:
           onClick:
             - id: reset
@@ -89,8 +86,6 @@ blocks:
           title: Submit
           type: primary
           icon: SaveOutlined
-          style:
-            font-family: Fredoka One
         events:
           onClick:
             - id: validate
