:art: Stylistic changes.

--- a/lowdefy.yaml
+++ b/lowdefy.yaml
@@ -2,6 +2,15 @@ name: whoswho
 lowdefy: 3.18.1
 licence: MIT License
 
+app:
+  html:
+    appendHead: |
+      <!-- Google Fonts -->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@0,400;0,700;1,400;1,700&family=Fredoka+One&display=swap" rel="stylesheet">
+      <!-- End of Google Fonts -->
+
 types:
   AgGridAlpine:
     url: https://blocks-cdn.lowdefy.com/v3.12.3/blocks-aggrid/meta/AgGridAlpine.json
@@ -20,7 +29,7 @@ connections:
       write: true
 
 menus:
-  - id: main_menu
+  - id: default
     links:
       - id: home_menu
         type: MenuLink
