--- a/pages/edits.yaml
+++ b/pages/edits.yaml
@@ -53,11 +53,11 @@ blocks:
           pageId: edits
           properties:
             title: Edits
-        - id: world_map_menu
+        - id: globe_menu
           type: MenuLink
-          pageId: world_map
+          pageId: globe
           properties:
-            title: World Map
+            title: Globe
 
   - id: cover
     type: Card
