--- a/pages/about.yaml
+++ b/pages/about.yaml
@@ -1,17 +1,18 @@
 id: about
 type: PageHCF
-layout:
-  contentJustify: center
 properties:
-  title: About Who's Who
+  title: Who's Who in Astrochemistry
   style:
+    text-align: center
+    font-family: Fredoka One
     background-color: black
 
 
 
 blocks:
 
-  - id: main_menu
+  
+  - id: menu
     type: Menu
     style:
       text-align: center
@@ -39,7 +40,9 @@ blocks:
           pageId: globe
           properties:
             title: Globe
+  
 
+  
   - id: cover
     type: Card
     layout:
@@ -49,11 +52,14 @@ blocks:
       - id: title
         type: Title
         properties:
+          content: Who's Who in Astrochemistry
           level: 1
-          content: Who's Who?
           style:
             text-align: center
             font-family: Bungee Shade
+          underline: true
+      
+      
       - id: netlify_status
         type: Markdown
         properties:
@@ -64,6 +70,7 @@ blocks:
             
             [deploys]: https://app.netlify.com/sites/whoswho/deploys
             [deploy-status]: https://api.netlify.com/api/v1/badges/ebd6006f-31b2-4fb4-bde0-b358aee83986/deploy-status
+
       - id: badges
         type: Markdown
         properties:
@@ -82,10 +89,10 @@ blocks:
             [gitmoji]: https://gitmoji.dev
             [license]: https://img.shields.io/github/license/astrogewgaw/whoswho?style=for-the-badge
             [gitmoji-badge]: https://img.shields.io/badge/gitmoji-%20😜%20😍-FFDD67.svg?style=for-the-badge
-            [count]: https://img.shields.io/badge/Astrochemists-366-blueviolet?style=for-the-badge
+            [count]: https://img.shields.io/badge/Astrochemists-365-blueviolet?style=for-the-badge
             [tweeters]: https://img.shields.io/badge/Tweeters-51-blue?style=for-the-badge&logo=twitter            
             [contactable]: https://img.shields.io/badge/Contactable-304-darkgreen?style=for-the-badge
-            [updated]: https://img.shields.io/badge/Last%20Updated-Wednesday%2018%20August,%202021%2008:20:46%20pm%20UTC-purple?style=for-the-badge
+            [updated]: https://img.shields.io/badge/Last%20Updated-Sunday%2022%20August,%202021%2012:33:40%20pm%20UTC-purple?style=for-the-badge
       
       - id: subtitle
         type: Title
@@ -95,12 +102,13 @@ blocks:
           style:
             text-align: center
             font-family: Fredoka One
+
       - id: intro
         type: Markdown
         properties:
           style:
             text-align: justify
-            font-family: Cantarell
+            font-family: Balsamiq Sans
           content:
 
       
@@ -113,3 +121,5 @@ blocks:
           skipHtml: true
           content: |
             Copyright &#xa9; 2021 Ujjwal Panda
+      
+  
