:truck: Shifting files here and there.
Plus now we are using YAML instead of TOML for the configuration of the whole app. This commit also removes the needless class I made to store all the sub-configurations (why did I do that?) and goes simpler. I guess in a few more iterations I will finally have some sensible code down lol.

--- a/pages/about.yaml
+++ b/pages/about.yaml
@@ -106,8 +106,9 @@ blocks:
         properties:
           style:
             text-align: justify
-            font-family: Balsamiq Sans
+            font-family: Cantarell
           content:
+            _ref: texts/about.md
 
       
       - id: footer
@@ -115,9 +116,9 @@ blocks:
         properties:
           style:
             text-align: center
-            font-family: Fredoka One
           skipHtml: true
           content: |
+            
             Copyright &#xa9; 2021 Ujjwal Panda
       
   
