:package: Compiling templates.

--- a/pages/about.yaml
+++ b/pages/about.yaml
@@ -106,7 +106,7 @@ blocks:
         properties:
           style:
             text-align: justify
-            font-family: Cantarell
+            font-family: Space Mono
           content:
             _ref: content/about.md
 
