--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -3,8 +3,8 @@ name: Update
 on:
   workflow_dispatch:
   schedule:
-    # Every Monday at midnight.
-    - cron: "0 0 * * 1"
+    # Every Christmas, at noon.
+    - cron: "0 12 25 12 *"
 
 jobs:
   build:
